...

class URLShortenerTableViewHeader: UIView {
    private lazy var originalURLTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = NSLocalizedString(Strings.LocalizableKeys.Link.TextField.placeholder, comment: "")
        textField.borderStyle = .roundedRect
        textField.accessibilityIdentifier = "urlTextField"
        textField.translatesAutoresizingMaskIntoConstraints = false
        return textField
    }()
    
    private lazy var sendButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "sendButton"
        button.setImage(.init(systemName: Strings.SystemImage.checkmark.rawValue), for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setContentCompressionResistancePriority(.required, for: .horizontal)
        button.addTarget(self, action: #selector(didTapSendButton), for: .touchUpInside)
...
