...
    func displayCopyMessage()
}

fileprivate enum Layout {
    enum TableView {
        static let cellIdentifier = "Cell"
        static let accessibilityIdentifier = "recentlyUrlTableView"
    }
}

final class URLShortenerViewController: UIViewController {
    private lazy var tableViewHeader: UIView = {
        let header = URLShortenerTableViewHeader()
...
        recentlyUrlDataSource.count
    }
    
    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        let cell = tableView.dequeueReusableCell(withIdentifier: Layout.TableView.cellIdentifier, for: indexPath)
        guard recentlyUrlDataSource.indices.contains(indexPath.row) else { return UITableViewCell() }
        cell.accessibilityIdentifier = "urlCell"
        cell.textLabel?.text = recentlyUrlDataSource[indexPath.row].originalURL
        cell.textLabel?.numberOfLines = LayoutDefaults.Label.numberOfLines
        return cell
    }
}

...
